<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="225dp"
        android:id="@+id/imagePlaceHolder"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_take_picture"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_manufacturer"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/imagePlaceHolder"/>

    <TextView
        android:id="@+id/tv_brand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintBottom_toBottomOf="@+id/textView"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:text="@string/txt_model"
        android:layout_marginTop="8dp"
        android:id="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintRight_toLeftOf="@+id/guideline" />

    <TextView
        android:id="@+id/tv_model"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintRight_toRightOf="@+id/tv_brand"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:text="@string/txt_license_plate"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:id="@+id/textView3"
        app:layout_constraintRight_toLeftOf="@+id/guideline" />

    <TextView
        android:id="@+id/tv_license_plate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintRight_toRightOf="@+id/tv_model"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:text="@string/txt_issue_date"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:id="@+id/textView5"
        app:layout_constraintRight_toLeftOf="@+id/guideline" />

    <TextView
        android:id="@+id/tv_reg_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintRight_toRightOf="@+id/tv_license_plate"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:text="@string/txt_vehicle_type"
        app:layout_constraintLeft_toLeftOf="@+id/textView5"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:id="@+id/textView6"
        app:layout_constraintRight_toLeftOf="@+id/guideline"/>

    <Spinner
        android:id="@+id/spr_vehicle_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@+id/tv_reg_date"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintLeft_toLeftOf="@+id/guideline">
    </Spinner>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:text="@string/txt_fuel_type"
        app:layout_constraintLeft_toLeftOf="@+id/textView6"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:id="@+id/textView7"
        app:layout_constraintRight_toLeftOf="@+id/guideline"/>

    <Spinner
        android:id="@+id/spr_fuel_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@+id/spr_vehicle_type"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintLeft_toLeftOf="@+id/guideline">
    </Spinner>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:text="@string/txt_service_type"
        android:id="@+id/textView4"
        app:layout_constraintLeft_toLeftOf="@+id/textView7"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintRight_toLeftOf="@+id/guideline" />

    <Spinner
        android:id="@+id/spr_service_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@+id/spr_fuel_type"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintLeft_toLeftOf="@+id/guideline">
    </Spinner>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />


</android.support.constraint.ConstraintLayout>