<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/cardview_default_elevation">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_driver_license"
            android:id="@+id/lbl_driver_license"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="No. 71335078"
            app:layout_constraintTop_toBottomOf="@id/lbl_driver_license"
            android:id="@+id/tv_driver_license_num"
            app:layout_constraintLeft_toLeftOf="@id/lbl_driver_license"
            app:layout_constraintRight_toRightOf="@id/lbl_driver_license"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_name"
            app:layout_constraintTop_toBottomOf="@id/tv_driver_license_num"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/lbl_name"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Andres Felipe Solano Estrada"
            android:id="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/lbl_name"
            app:layout_constraintLeft_toLeftOf="@id/lbl_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_issue_date"
            android:id="@+id/lbl_issue_date"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="@+id/tv_issue_date"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_issue_date"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintBottom_toTopOf="@+id/tv_issue_date"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="14-07-2014"
            android:id="@+id/tv_issue_date"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_exp_date"
            android:id="@+id/lbl_exp_date"
            app:layout_constraintRight_toRightOf="@+id/tv_expiration_date"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="10-01-2022"
            android:id="@+id/tv_expiration_date"
            app:layout_constraintTop_toBottomOf="@+id/lbl_exp_date"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintLeft_toRightOf="@+id/tv_issue_date"
            android:layout_marginLeft="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_category"
            android:id="@+id/lbl_category"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintLeft_toRightOf="@id/lbl_exp_date"
            android:layout_marginLeft="8dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="B1"
            android:id="@+id/tv_category"
            app:layout_constraintTop_toBottomOf="@id/lbl_category"
            app:layout_constraintRight_toRightOf="@id/lbl_category"
            app:layout_constraintLeft_toLeftOf="@id/lbl_category"
            app:layout_constraintHorizontal_bias="0.5"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="75dp"
            app:srcCompat="@drawable/ic_account"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintLeft_toRightOf="@id/lbl_category"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_driver_license_num" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
